# ccs-dependencies

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TESTING.md  install.py  install_base.sh  install_cray_A2.sh  install_gnu_A2.sh  install_gnu_cirrus.sh  install_gnu_ubuntu.sh  pyproject.toml  pytest.ini  python_design.md  requirements.txt  setup.py  setup_base.sh  setup_cray_A2.sh  setup_gnu_A2.sh  setup_gnu_cirrus.sh  setup_gnu_macos.sh  setup_gnu_ubuntu.sh
ccs_dep/: __init__.py  install.py  setup.py
ccs_dep/installers/: __init__.py  adios2.py  base.py  fyaml_c.py  hdf5.py  makedepf90.py  parhip.py  parmetis.py  petsc.py  python_deps.py  rcm_f90.py
ccs_dep/utils/: __init__.py  command.py  environment.py  system.py
config/: cray_A2.yml  default_config.yml  gnu_devcontainer.yml  gnu_macos.yml  gnu_ubuntu.yml
install_scripts/: install_adios2.sh  install_fyaml_c.sh  install_hdf5.sh  install_makedepf90.sh  install_parhip.sh  install_parmetis.sh  install_petsc.sh  install_python_pyyaml_lit.sh  install_rcm_f90.sh
installers/: __init__.py  base.py  hdf5.py  parmetis.py  petsc.py
tests/: README.md  __init__.py  run_installer_tests.py  test_adios2_installer.py  test_fyaml_c_installer.py  test_gitpython.py  test_hdf5_installer.py  test_installers_base.py  test_makedepf90_installer.py  test_parhip_installer.py  test_parmetis_installer.py  test_petsc_installer.py  test_python_deps_installer.py  test_rcm_f90_installer.py
utils/: command.py  environment.py  system.py
